[package]
name = "voidmap"
version = "0.3.0"
authors = ["Tyler Neely <t@jujit.su>"]
description = "terminal mind-map + task tracker + tsdb"
license = "GPL-3.0"
homepage = "https://github.com/spacejam/void"
keywords = ["cli", "commandline", "visualization", "ui"]

[[test]]

name = "test"
path = "test/test.rs"

[features]
default = []

[dependencies]
termion = "1.1"
log = "0.3"
lazy_static = "0.2"
time = "0.1"
hyper = "0.9"
getopts = "0.2"
protobuf = "1.0"
rand = "0.3"
libc = "0.2"
regex = "0.1"
unicode-segmentation = "0.1"
clippy = {version = "*", optional = true}

[dev-dependencies]
quickcheck = "0.3"
