[package]
name = "voidmap"
version = "1.1.5"
authors = ["Tyler Neely <t@jujit.su>", "Katharina Fey <kookie@spacekookie.de>"]
description = "terminal mind-map + task tracker + tsdb"
license = "GPL-3.0"
homepage = "https://github.com/void-rs/void"
keywords = ["cli", "commandline", "visualization", "ui"]
edition = "2018"

[[test]]

name = "test"
path = "test/test.rs"

[features]
default = []

[dependencies]
dirs = "1.0"
clap = "2.0"
termion = "1.1"
log = "0.3"
lazy_static = "0.2"
time = "0.1"
hyper = "0.10"
getopts = "0.2"
protobuf = "1.1"
rand = "0.3"
libc = "0.2"
regex = "1.1"
unicode-segmentation = "0.1"
clippy = { version = "0.0", optional = true }
fs2 = "0.4.1"

[dev-dependencies]
quickcheck = "0.3"
